2014-05-19 Roman
- Archive: Service "/serv/mess" on request direct to alarms set negative level fix for prevent storage data modify.


2014-05-16 Roman
- FIX: TFunction: Expand to int64_t fix.
- SYS: Added new global simple function s2ll() into OSCADA namespace.
- !!:ModBus: Complex types expand by "i8" - int64, "u2" - uint16, "u4" - uint32, "d" - Double.
    To protocol part classic form for registers added and complex types expand by "i8" - Int64, "d" - Double.


2014-05-15 Roman
- DB.LibsDB.OscadaLibs.db: Manual input template base.manInUnif expand for local constants store.
- SYS: Build with GCC 3.4 and Qt-4.5 is resored.
    ChangeLog some some fix.
- DAQ.JavaLikeCalc: Append default safe timeout set into the module tab.
- FIX:DAQ.ModBus: Write to complex type like "_f", "_i4" for write-only mode is fixed.
- DAQ.OPC_UA: Commenting nodes into the list support is added, by symbol '#'.
- DAQ.SNMP: Mostly expand for OIDs browser implement, MIB Tree using for access mode and enums obtain.
    Including parameters enable.


2014-05-08 Roman
- DB:LibsDB.OscadaLibs.db: DAQ template "anUnifSt" and "anUnif" set for EVAL result at hardware border exceed.
- DB:LibsDB.vcaBase.db: Widgets Main.{anShow,anShow1} expanded for allow negative precision.
- Archive: Service "/serv/mess" on request direct to alarms set negative level at results.
- DAQ.Templates: "Maximum calculate time (sec)" field set active only for started DAQ templates. Some code clean up.
- DAQ.DAQGate: Force all alarms request before the messages (level >= 0) is added.


2014-05-05 Roman
- DB.LibsDB.OscadaLibs.db: DAQ template "anUnifSt" sync to "anUnif" and properties "iMult" "iAdd" process fix.
- DB.{LibsDB.vcaBase.db,AGLKS.{St.db,vca.db}}: Mnemo elements "Compressor", "Compressor_1", "El_Kran_Sh", "El_Zadvizhka", "Zadvizhka"
    expanded by attributes "digComs" and "digStts". Mnemo element "Level" fix for validate and EVAL.